
              pnmconvol: Restore ability of convolution matrix to be a
              pseudo-plain-PNM with samples that exceed the maxval.  Lost in
              10.30 (October 2005) because maxval-checking code was added to
              libnetpbm.  (Was fixed in 10.47.08 in November 2010, but only in
              the 10.47 series).

              pnmindex: Make -plain work.

              pnmpad: fix behavior with -left, -right, and -width together or
              -top, -bottom, -height together: ignores -width where it should
              fail.  Broken in Netpbm 10.72 (September 2015).

              pamtosvg: fix "zero determinant" failure.  Introduced in
              Netpbm 11.04 (September 2023).

              pjtoppm: fix crash based on uninitialized variable.
              Introduced in Netpbm 11.04 (September 2023).

              ppmtopcxl: fix incorrect output with > 256 colors.  Always
              broken.  (Program was added in primordial Netpbm in 1990).

              pbmtext: fix buffer overrun with insanely large input.

              picttoppm: fix buffer overrun with insanely wide input.

              ppmtoxpm: fix incorrect output with insanely large number of
              colors.

              pnmscalefixed: fix incorrect output with really big image and
              -pixels option.

              ppmdither: fix buffer overrun with insanely large dithering
              matrix.

              pnmpad: no longer accept old-style options (e.g. -t50).

              libnetpbm: Add pm_feed_from_file, pm_accept_to_files,
              pm_accept_to_filestream Standard Input feeder, Output accepter
              for pm_system.

              libnetpbm, programs that use color maps: fix buffer overrun
              with insanely deep images.

              merge build: Fix 'pnmcat'.  Introduced in Netpbm 11.00
              (September 2023).

              Build: Fix compile error on systems without 'asprintf'.