@@ -14,6 +14,8 @@ not yet  BJH  Release 11.05.00
               libnetpbm.  (Was fixed in 10.47.08 in November 2010, but only in
               the 10.47 series).
 
+              pnmindex: Improve failure mode when -size or -across is zero.
+
               pnmindex: Make -plain work.
 
               pnmpad: fix behavior with -left, -right, and -width together or
